--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css'>
-        <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8">
+        <!-- <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8"> -->
         <title>Hair Salon!</title>
     </head>
     <body>
