--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -15,5 +15,11 @@
 
           <button type="submit" class= "btn btn-info">Update</button>
         </form>
+
+        <form action="/stylists/{{ stylist.getId }}" method="post">
+            <input name="_method" type="hidden" value="delete">
+
+            <button type="submit">Delete this stylist</button>
+        </form>
     </body>
 </html>
