--- a/views/stylist.html.twig
+++ b/views/stylist.html.twig
@@ -19,6 +19,8 @@
                 </ul>
             {% endif %}
 
+            <p><a href="/clients/{{ client.getId }}/edit">Edit Client</a></p>
+
             <h2>Add a client</h2>
             <div class="form-group">
               <form action="/clients" method="post">
