add delete function for single client delete

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -28,7 +28,7 @@
                     <p>There are no stylists added yet!</p>
             {% endif %}
 
-            <form action="delete_stylists" method="post">
+            <form action="/delete_stylists" method="post">
                 <button type="submit" class="btn btn-danger">Delete all stylists</button>
             </form>
         </div>
