--- a/views/client_edit.html.twig
+++ b/views/client_edit.html.twig
@@ -7,13 +7,16 @@
     <body>
         <div class="container">
 
-            <h1>Update your {{ client.getClientName }} name </h1>
+            <h1>Update your clients information </h1>
 
-            <form action="/stylists/{{ stylist.getId }}" method="post">
+            <form action="/clients" method="post">
               <input name="_method" type="hidden" value="patch">
 
-              <label for="stylist_name">Rename your client:</label>
-              <input id="name" name="stylist_name" type="text">
+              <label for="name">Rename {{ client.getName }}:</label>
+              <input id="name" name="name" type="text"> </br>
+
+              <label for="phone">Edit Phone number</br> Current number: {{ client.getPhone }}</label>
+              <input id="phone" name="phone" type="text">
 
               <button type="submit" class= "btn btn-info">Update</button>
             </form>
