--- a/views/client_edit.html.twig
+++ b/views/client_edit.html.twig
@@ -9,14 +9,11 @@
 
             <h1>Update your clients information </h1>
 
-            <form action="/clients" method="post">
+            <form action="/clients/{{ client.getId }}" method="post">
               <input name="_method" type="hidden" value="patch">
 
               <label for="name">Rename {{ client.getName }}:</label>
-              <input id="name" name="name" type="text"> </br>
-
-              <label for="phone">Edit Phone number</br> Current number: {{ client.getPhone }}</label>
-              <input id="phone" name="phone" type="text">
+              <input id="name" name="name" type="text">
 
               <button type="submit" class= "btn btn-info">Update</button>
             </form>
@@ -24,8 +21,9 @@
             <form action="/clients/{{ client.getId }}" method="post">
                 <input name="_method" type="hidden" value="delete">
 
-                <button type="submit" class="btn btn-default">Delete this client</button>
+                <button type="submit" class="btn btn-danger">Delete this client</button>
             </form>
+            <a href="/"><button type="submit"class="btn btn-default">Home</button></a>
         </div>
     </body>
 </html>
